--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,7 @@
 $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
 
 @import 'sass-bootstrap/lib/bootstrap';
-@import '../scripts/vendor/jquery.imageReveal.css';
+@import 'jquery.imageReveal.css';
 
 .browsehappy {
     margin: 0.2em 0;
@@ -71,7 +71,7 @@ body {
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
     .container {
-        max-width: 730px;
+        max-width: 938px;
     }
 
     /* Remove the padding we set earlier */
