--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1,7 +1,10 @@
 $icon-font-path: "/bower_components/sass-bootstrap/fonts/";
+@import "jquery.imageReveal.css";
 
-@import 'sass-bootstrap/lib/bootstrap';
-@import 'jquery.imageReveal.css';
+
+$body-bg:               #111;
+$text-color:            #EEE;
+@import "sass-bootstrap/lib/bootstrap";
 
 .browsehappy {
     margin: 0.2em 0;
@@ -39,7 +42,7 @@ body {
 
 /* Custom page footer */
 .footer {
-    padding-top: 19px;
+    padding-top: 12px;
     color: #777;
     border-top: 1px solid #e5e5e5;
 }
@@ -68,8 +71,30 @@ body {
     margin-top: 28px;
 }
 
+.top-button{
+    ////
+    // button size
+    padding: 0px 77px;
+    margin: -33px 0 0 20px;
+    font-size: 56px;
+
+    ////
+    // button color
+    color: #666;
+
+    ////
+    // shadow
+    -webkit-box-shadow: 5px 5px 12px 3px rgba(50, 50, 50, 0.58);
+    -moz-box-shadow: 5px 5px 12px 3px rgba(50, 50, 50, 0.58);
+    box-shadow: 2px 2px 6px 2px rgba(50, 50, 50, 0.58);   
+}
+
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
+    h2, .h2 {
+    font-size: 40px;
+    }
+
     .container {
         max-width: 938px;
     }
